--- a/pandas_basics.ipynb
+++ b/pandas_basics.ipynb
@@ -270,6 +270,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12, 13],\n",
+       "       [15, 16, 17],\n",
+       "       [19, 20, 21],\n",
+       "       [23, 24, 25],\n",
+       "       [27, 28, 29]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:,1:].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
